<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <Button
        android:id="@+id/btnPlatafomas"
        android:layout_width="178dp"
        android:layout_height="95dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="55dp"
        android:text="@string/Mis_PLT"
        app:layout_constraintBottom_toTopOf="@+id/btnPeliculas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPeliculas"
        android:layout_width="178dp"
        android:layout_height="95dp"
        android:layout_marginStart="147dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="247dp"
        android:text="@string/pelicula"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlatafomas" />

    <Button
        android:id="@+id/btnExportar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="60dp"
        android:text="@string/exportar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPeliculas" />

</androidx.constraintlayout.widget.ConstraintLayout>