<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    android:elevation="10dp"
    android:textColor="#FFFFFF"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtBienvenida"
        android:layout_width="227dp"
        android:layout_height="65dp"

        android:layout_marginStart="50dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="27dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/hola"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="45dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/rounded_edit"
        android:ems="10"

        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="45dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="45dp"

        android:background="@drawable/rounded_edit"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/passtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBienvenida" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="315dp"
        android:layout_height="48dp"


        android:layout_marginStart="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passtext" />

    <Button
        android:id="@+id/btnCuentaNueva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/rounded_button"

        android:text="@string/crear_cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCuentaNueva" />

    <TextView
        android:id="@+id/txtCuentaNueva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="163dp"

        android:layout_marginEnd="150dp"
        android:layout_marginBottom="10dp"
        android:text="@string/preg_nuevo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnCuentaNueva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciar" />

</androidx.constraintlayout.widget.ConstraintLayout>