<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <Spinner
        android:id="@+id/genero"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="45dp"
        android:background="#E8EBEC"
        android:entries="@array/array_generos"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnContinuarP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lytDuracion" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="130dp"
        android:fontFamily="sans-serif"
        android:text="@string/crear_peli"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/fotoPrevPelicula"
        android:layout_width="135dp"
        android:layout_height="144dp"
        android:layout_marginTop="40dp"
        android:background="@color/greybck"

        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/platafroma"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="15dp"
        android:background="#E8EBEC"
        android:contentDescription="@string/Mis_PLT"
        app:layout_constraintBottom_toTopOf="@+id/lytCalificacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lytNombre" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="66dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="372dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoPrevPelicula"
        app:layout_constraintVertical_bias="0.0">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnCamaraP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/imagen"
            app:srcCompat="@drawable/camera_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnGaleriaP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@drawable/galery_icon"
            app:srcCompat="@drawable/galery_icon" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytNombre"
        style="@style/AppTheme.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintBottom_toTopOf="@+id/platafroma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytDuracion"
        style="@style/AppTheme.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintBottom_toTopOf="@+id/genero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lytCalificacion"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDuraicon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/duracion"
            android:inputType="time" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytCalificacion"
        style="@style/AppTheme.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintBottom_toTopOf="@+id/lytDuracion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCalificacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calificacion"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnContinuarP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="270dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="20dp"
        android:text="@string/continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genero" />

    <TextView
        android:id="@+id/tvPLataforma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="296dp"
        android:layout_marginBottom="2dp"
        android:text="@string/plataforma"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/platafroma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lytNombre" />


</androidx.constraintlayout.widget.ConstraintLayout></ScrollView>