<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="193dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/nuevaPlataforma"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/txtImagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/fotoPrevPlataforma"
        android:layout_width="135dp"
        android:layout_height="144dp"
        android:layout_marginTop="40dp"
        android:background="@color/greybck"

        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="66dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="372dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoPrevPlataforma"
        app:layout_constraintVertical_bias="0.0">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnCamara"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/imagen"
            app:srcCompat="@drawable/camera_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@drawable/galery_icon"
            app:srcCompat="@drawable/galery_icon" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtUsuacceso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:background="#E8EBEC"
        android:ems="10"
        android:hint="@string/usuarioacceso"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtURL"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtPaswAcceso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:background="#E8EBEC"
        android:ems="10"
        android:hint="@string/passwordacceso"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnContinuar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuacceso"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="120dp"
        android:fontFamily="sans-serif"
        android:text="@string/imagen"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/fotoPrevPlataforma"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="45dp"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:background="#E8EBEC"
        android:ems="10"
        android:hint="@string/urlacceso"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"

        android:background="#E8EBEC"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txtURL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/continuar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>